--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_width="63dp"
         android:layout_height="30dp"
         android:background="#00ff0000"
-        android:text="로그인"
+        android:text="@string/login"
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,7 +27,7 @@
         android:layout_width="74dp"
         android:layout_height="30dp"
         android:background="#00ff0000"
-        android:text="회원가입"
+        android:text="@string/signUp"
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -41,6 +41,7 @@
         android:id="@+id/logo"
         android:layout_width="195dp"
         android:layout_height="115dp"
+        android:contentDescription="@string/login_img"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -53,6 +54,7 @@
         android:id="@+id/sns"
         android:layout_width="218dp"
         android:layout_height="61dp"
+        android:contentDescription="@string/sns_img"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +68,7 @@
         android:layout_height="40dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:text="Email"
+        android:hint="@string/Email"
         android:textColor="@android:color/background_light"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/password"
@@ -83,7 +85,7 @@
         android:layout_height="40dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="Password"
+        android:hint="@string/Password"
         android:textColor="@android:color/background_light"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
