--- a/app/src/main/res/menu/activity_map_drawer.xml
+++ b/app/src/main/res/menu/activity_map_drawer.xml
@@ -24,5 +24,9 @@
             android:id="@+id/nav_setting"
             android:icon="@drawable/ic_menu_manage"
             android:title="설정" />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="@string/logout" />
     </group>
 </menu>
